[package]
name = "serverhc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.2"
log4rs = "1.2.0"
chrono = "0.4.24"
timer = "0.2.0"
